Delete .image-sizing rule from CSS media query max-width 1525px to fix image stretching on mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,10 +302,6 @@ footer {
 }
 
 @media screen and (max-width: 1525px) {
-  .image-sizing {
-    height: 100%;
-  }
-
    #hero-image-controls h2 {
     font-size: 4rem;
     width: 45%;
